// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Title Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h3
    className="container color-base"
  >
    Consent doubt Tuckborough challenge destroying.
  </h3>
  <h3
    className="container color-primary"
  >
    Consent doubt Tuckborough challenge destroying.
  </h3>
  <h3
    className="container color-muted"
  >
    Consent doubt Tuckborough challenge destroying.
  </h3>
  <h3
    className="container color-button"
  >
    Consent doubt Tuckborough challenge destroying.
  </h3>
</div>
`;

exports[`Storyshots Atoms/Title Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h3
    className="container color-primary"
  >
    Consent doubt Tuckborough challenge destroying.
  </h3>
</div>
`;

exports[`Storyshots Atoms/Title Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h4
    className="container color-primary"
  >
    Consent doubt Tuckborough challenge destroying.
  </h4>
  <h3
    className="container color-primary"
  >
    Consent doubt Tuckborough challenge destroying.
  </h3>
  <h2
    className="container color-primary"
  >
    Consent doubt Tuckborough challenge destroying.
  </h2>
</div>
`;
